kubernetes/media/prowlarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr-develop:1.21.0@sha256:a2face5a50fb161ff24b9de419731a60ce0a8aae9bb7eb7189ed3627c9dd39cf
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: prowlarr-storage
              mountPath: /config
      volumes:
        - name: prowlarr-storage
          persistentVolumeClaim:
            claimName: prowlarr-config
