kubernetes/media/prowlarr/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: prowlarr-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-solonsstuff-com-live-tls
